--- a/ruby/Gemfile
+++ b/ruby/Gemfile
@@ -2,4 +2,11 @@ ruby '3.2.2'
 
 source 'https://rubygems.org'
 
-gem "rspec", "~> 3.0"
+group :test, :development do
+  gem "rubocop"
+  gem "rubocop-performance"
+  gem "rubocop-rails"
+  gem "rubocop-rspec"
+  gem "rspec", "~> 3.0"
+  gem "simplecov", "~> 0.21"
+end
